objects/Purchase_Suggestion__c.object
<CustomObject>
    <label>Purchase Suggestion</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Purchase Suggestion	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Suggestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BC_ID__c</fullName>
        <formula>Technical_Field_BC__r.BC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hex_Id__c</fullName>
        <label>Hex Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Contact__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>MAIL</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>SOCIAL MESSAGING</fullName>
                </value>
                <value>
                    <fullName>WHATSAPP</fullName>
                </value>
                <value>
                    <fullName>WECHAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Suggestions</relationshipLabel>
        <relationshipName>Purchase_Suggestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <label>Link URL</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OG_Title__c</fullName>
        <label>OG Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_Used__c</fullName>
        <formula>IF(Link_Clicks__c &gt; 0, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Clicks__c</fullName>
        <label>Link Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OG_Image_URL__c</fullName>
        <label>OG Image URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OG_Description__c</fullName>
        <label>OG Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Field_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Purchase Suggestions</relationshipLabel>
        <relationshipName>Purchase_Suggestions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>